--- a/Frontend-DoreaApp/src/App.css
+++ b/Frontend-DoreaApp/src/App.css
@@ -3,3 +3,4 @@
 @import url(./components/header/Header.css);
 @import url(./components/footer/Footer.css);
 @import url(./components/main/Main.css);
+@import url(./components/sobre/Sobre.css);
