import do arquivo css parceiros e contato

--- a/Frontend-DoreaApp/src/App.css
+++ b/Frontend-DoreaApp/src/App.css
@@ -4,3 +4,5 @@
 @import url(./components/footer/Footer.css);
 @import url(./components/main/Main.css);
 @import url(./components/sobre/Sobre.css);
+@import url(./components/parceiros/Parceiros.css);
+@import url(./components/contato/Contato.css);
